test/testdata/classes/methods/class/missing_3_args_error.lox
class Foo {
  class add(a, b, c) {
    print a + b + c;
  }
}

Foo.add(); // error: Foo.add() missing 3 arguments: a, b, and c
